Made changes to html file

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>BackTracking Algo. Visualizer</title>
   </head>
 
-  <!-- Generate Puzzle Function is called after the page is completel loaded -->
+  <!-- Generate Puzzle Function is called after the page is completely loaded -->
 
   <body onload="generatePuzzle()">
     <!-- NavBar containing controls -->
